# haskell-mu-recursive

./: CHANGELOG.md  README.md  mu-recursion.cabal  stack.yaml
lib/: MuRecursion.hs
src/: Main.hs
